--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "babel-jest": "^29.5.0",
@@ -19,6 +20,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "ts-node": "^10.9.1",
     "whatwg-fetch": "^3.6.2"
   },
